--- a/Homework_4/index.html
+++ b/Homework_4/index.html
@@ -31,7 +31,7 @@
                 <div class="mainmenu">
                     <ul class="menu">
                         <li><a href="#">Главная</a></li>
-                        <li><a href="#">Путешествие <img src="img/white_triangles.png" alt=""></a>
+                        <li class="math"><a href="#">Путешествие</a>
                              <ul class="trip">
                                 <li>Путешествие 1</li>
                                 <li>Путешествие 2</li>
@@ -40,12 +40,12 @@
                                 <li>Путешествие 5</li>
                             </ul>
                         </li>
-                        <li><a href="#">Услуги <img src="img/white_triangles.png" alt=""></a></li>
-                        <li><a href="#">Партнерам <img src="img/white_triangles.png" alt=""></a></li>
+                        <li class="math"><a href="#">Услуги</a></li>
+                        <li class="math"><a href="#">Партнерам</a></li>
                         <li><a href="#">Отзывы клиентов</a></li>
                         <li><a href="#">О нас</a></li>
                         <li><a href="#">Контакты</a></li>
-                </ul>
+                    </ul>
                 </div>
             </div>
             <div class="content">
