--- a/Homework_5/5_1_lesson/index.html
+++ b/Homework_5/5_1_lesson/index.html
@@ -7,23 +7,23 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="wrapper">
-    <div class="container">
-        <div class="header">
-            <div class="mainmenu">
-                <div class="menu"><span>Meu YouBike</span></div>
-                <div class="menu"><span>Vender</span></div>
-                <div class="menu"><span>Forum</span></div>
-                <div class="menu"><span>Contato</span></div>
-                <div class="menu"><span>Ajuda</span></div>
-                <div class="menu"><span class="white">
+<div class="header">
+    <div class="mainmenu">
+        <div class="menu"><span>Meu YouBike</span></div>
+        <div class="menu"><span>Vender</span></div>
+        <div class="menu"><span>Forum</span></div>
+        <div class="menu"><span>Contato</span></div>
+        <div class="menu"><span>Ajuda</span></div>
+        <div class="menu"><span class="white">
                     <img src="img/inventicons-29.png" alt="">
                     Minhas Ofertas</span></div>
-                <div class="menu">
-                    <span>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></span>
-                </div>
-            </div>
+        <div class="menu">
+            <span>Ola! <a href="#">Entrar</a> ou <a href="#">Cadastre-se</a></span>
         </div>
+    </div>
+</div>
+<div class="wrapper">
+    <div class="container">
         <div class="content">
             <div class="block">
                 <div class="head">
@@ -32,7 +32,7 @@
                 <div class="form">
                     <form action="#">
                         <div class="login">
-                            <button type="submit"> f | Log in <span class="nonbold">with</span> Facebook   > </button>
+                            <button type="submit" class="buttom">Log in <span class="nonbold">with</span> Facebook</button>
                         </div>
                         <div class="lineOU">
                             <p class="ou">OU</p>
