--- a/Homework_6/index.html
+++ b/Homework_6/index.html
@@ -32,7 +32,6 @@
         <div class="logo">
         </div>
     </div>
-    <div class="zone"></div>
     <div class="menu">
         <ul class="mainmenu">
             <li class="list"><a href="#">о компании</a></li>
@@ -40,9 +39,10 @@
             <li class="list"><a href="#">доставка</a></li>
             <li class="list"><a href="#">статьи</a></li>
             <li class="list"><a href="#">контакты</a></li>
-            <div style="clean:both;"></div>
+            <div class="clearfix"></div>
         </ul>
     </div>
+    <div class="zone"></div>
     <div class="content">
         <div class="LeftColumn">
             <span class="leftname">каталог продукции:</span>
@@ -159,15 +159,70 @@
                 </div>
                 <p class="price">393.00 грн</p>
             </div>
-            <div class="clean"></div>
+            <div class="clearfix"></div>
         </div>
         <div class="RightColumn">
-
+            <form action="#">
+                <p class="title">Бренды:</p>
+                <div class="rfirst">
+                    <p>ШИНЫ:</p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type1">
+                        <label for="type1">Бренд 1</label>
+                    </p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type2">
+                        <label for="type2">Бренд 2</label>
+                    </p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type3">
+                        <label for="type3">Бренд 3</label>
+                    </p>
+                </div>
+                <div class="rsecond">
+                    <p>ДИСКИ:</p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type4">
+                        <label for="type4">Бренд 1</label>
+                    </p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type5">
+                        <label for="type5">Бренд 2</label>
+                    </p>
+                    <p class="checkbox">
+                        <input type="checkbox" id="type6">
+                        <label for="type6">Бренд 3</label>
+                    </p>
+                </div>
+                <div class="choise">
+                    <button>Выбрать</button>
+                </div>
+            </form>
         </div>
+        <div class="clearfix"></div>
     </div>
     <div class="footer">
-        <div class="pics"></div>
-        <div class="about"></div>
+        <div class="pics">
+            <ul class="footerpics">
+                <li class="pic"><a href="#"><img src="img/item01.png" alt=""></a></li>
+                <li class="pic"><a href="#"><img src="img/item02.png" alt=""></a></li>
+                <li class="pic"><a href="#"><img src="img/item03.png" alt=""></a></li>
+                <li class="pic"><a href="#"><img src="img/item04.png" alt=""></a></li>
+                <li class="pic"><a href="#"><img src="img/item05.png" alt=""></a></li>
+                <li class="pic"><a href="#"><img src="img/item06.png" alt=""></a></li>
+                <div class="clearfix"></div>
+            </ul>
+        </div>
+        <div class="about">
+            <ul class="fmenu">
+                <li><a href="#" class="border">О компании</a></li>
+                <li><a href="#" class="border">Доставка</a></li>
+                <li><a href="#" class="border">Статьи</a></li>
+                <li><a href="#">Контакты</a></li>
+            </ul>
+            <p class="move"><a href="#">Создание сайта</a>
+                <span>&copy; Global Vision</span></p>
+        </div>
     </div>
 </div>
 </body>
